# uvadlc_practicals_2025

./: .gitignore  README.md  dl2025_cpu.yml  pyproject.toml  run_q2_q3.sh
assignment1/: mlp_numpy.py  mlp_pytorch.py  modules.py  plot_utils.py  train_mlp_numpy.py  train_mlp_pytorch.py
assignment2/: run_q2_q3.job
assignment2/part1/: exercise1.2.ipynb
assignment2/part1/exercise1.1/: net.py
assignment2/part2/: eval_generation.py  generate.py  gpt.py  q2_8b_generation_results.json
assignment2/part2/logs/gpt-mini/version_0/: events.out.tfevents.1764715112.gcn55.local.snellius.surf.nl.2270383.0  hparams.yaml
assignment2/part2/logs/gpt-mini/version_1/: events.out.tfevents.1764888353.gcn38.local.snellius.surf.nl.2245185.0  hparams.yaml
assignment2/part2/logs/gpt-mini/version_2/: events.out.tfevents.1764888733.gcn38.local.snellius.surf.nl.2248893.0
assignment2/part3/: graph_cnn.py
assignment2/part3/logs/gat/version_0/: events.out.tfevents.1764708988.gcn33.local.snellius.surf.nl.2350.0
assignment2/part3/logs/gat/version_1/: events.out.tfevents.1764715126.gcn21.local.snellius.surf.nl.547199.0
assignment2/part3/logs/gat/version_1/checkpoints/: epoch=49-step=50.ckpt
assignment2/part3/logs/gat/version_2/: events.out.tfevents.1764716180.gcn55.local.snellius.surf.nl.2470334.0
assignment2/part3/logs/gat/version_3/: events.out.tfevents.1764889805.gcn38.local.snellius.surf.nl.2448748.0
assignment2/part3/logs/gcn/version_0/: events.out.tfevents.1764708731.gcn33.local.snellius.surf.nl.3920612.0
assignment2/part3/logs/gcn/version_1/: events.out.tfevents.1764712186.gcn53.local.snellius.surf.nl.895234.0
assignment2/part3/logs/gcn/version_2/: events.out.tfevents.1764714871.gcn21.local.snellius.surf.nl.349789.0
assignment3/: run_q1_10.job  run_q2.job
assignment3/part1/: cnn_encoder_decoder.py  plot_vae_logs.py  train_pl.py  utils.py
assignment3/part2/: adversarial_attack.py  train.py  utils.py
(+16 files in other folders)
